Bare tagge på master

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,6 +68,7 @@ jobs:
           path: melosys-kodeverk-java
 
   tagge_frontend:
+    if: github.ref == 'refs/heads/master'
     needs: bygge_backend
     runs-on: ubuntu-latest
     container: node:latest
