--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,8 +107,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
-          with:
-            registry-url: 'https://npm.pkg.github.com'
+        with:
+          node-version: '12'
+          registry-url: 'https://npm.pkg.github.com'
       - run: |
           # TODO Sjekk om versjon kan gjenbrukes med beta-tag
           npm --no-git-tag-version version "${FRONTEND_VERSION}"
