--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,7 @@ jobs:
           cat .npmrc
           cat ~/.npmrc
           # TODO Sjekk om versjon kan gjenbrukes med beta-tag
+          npm config set registry https://npm.pkg.github.com/
           npm --no-git-tag-version version "${FRONTEND_VERSION}"
           npm publish --tag beta
         env:
@@ -137,6 +138,6 @@ jobs:
       - run: |
           ls -ltr
           echo "BACKEND ${BACKEND_VERSION}"
-        working-directory: melosys-internt-kodeverk
+        working-directory: melosys-internt-kodeverk/melosys-internt-kodeverk
         env:
           BACKEND_VERSION: ${{needs.lag_snapshot_versjon.outputs.backend_versjon}}
