--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,13 +146,15 @@ jobs:
       - name: Hente Maven-avhengigheter
         run: |
           # FIXME: Fiks/fjern maven-gpg-plugin i melosys-kodeverk-java/pom.xml
-          sed -i.bcp '223,241d' pom.xml
+          sed -i 's!https://oss.sonatype.org/content/repositories/snapshots!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' test.xml
+          sed -i 's!https://oss.sonatype.org/service/local/staging/deploy/maven2/!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' test.xml
+          sed -i '223,241d' pom.xml
           mvn dependency:resolve
           mvn dependency:resolve-plugins
           mvn versions:set -DnewVersion=$BACKEND_VERSION
-          mvn -B deploy -Prelease -DskipTests=true \
-            -DaltSnapshotDeploymentRepository=snapshots::default::https://maven.pkg.github.com/fleskesvor/melosys-kodeverk \
-            -DaltReleaseDeploymentRepository=releases::default::https://maven.pkg.github.com/fleskesvor/melosys-kodeverk
+          mvn -B deploy -Prelease -DskipTests=true
+          #  -DaltSnapshotDeploymentRepository=snapshots::default::https://maven.pkg.github.com/fleskesvor/melosys-kodeverk \
+          #  -DaltReleaseDeploymentRepository=releases::default::https://maven.pkg.github.com/fleskesvor/melosys-kodeverk
         working-directory: melosys-internt-kodeverk
         env:
           BACKEND_VERSION: ${{needs.lag_snapshot_versjon.outputs.backend_versjon}}
