--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,13 +150,14 @@ jobs:
           echo "BACKEND ${BACKEND_VERSION}"
         working-directory: melosys-internt-kodeverk
       - name: Hente Maven-avhengigheter
+        shell: bash
         run: |
           # FIXME: Fiks/fjern maven-gpg-plugin i melosys-kodeverk-java/pom.xml
           sed -i 's!https://oss.sonatype.org/content/repositories/snapshots!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
           sed -i 's!https://oss.sonatype.org/service/local/staging/deploy/maven2/!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
           sed -i '223,241d' pom.xml
           # FIXME: Legg til maven-settings.xml i melosys-kodeverk-java
-          cat <<EOT >> maven-settings.xml
+          cat <<EOT > maven-settings.xml
           <settings>
               <servers>
                   <server>
