--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,7 +150,6 @@ jobs:
           echo "BACKEND ${BACKEND_VERSION}"
         working-directory: melosys-internt-kodeverk
       - name: Hente Maven-avhengigheter
-        shell: bash
         run: |
           # FIXME: Fiks/fjern maven-gpg-plugin i melosys-kodeverk-java/pom.xml
           sed -i 's!https://oss.sonatype.org/content/repositories/snapshots!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
@@ -174,4 +173,5 @@ jobs:
           mvn -B deploy -Prelease -DskipTests=true --settings maven-settings.xml
         working-directory: melosys-internt-kodeverk
         env:
+          GITHUB_TOKENN: ${{ secrets.GITHUB_TOKEN }}
           BACKEND_VERSION: ${{needs.lag_snapshot_versjon.outputs.backend_versjon}}
