--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,7 +160,7 @@ jobs:
           <settings>
               <servers>
                   <server>
-                      <id>github</id>
+                      <id>ossrh</id>
                       <username>x-access-token</username>
                       <password>${GITHUB_TOKEN}</password>
                   </server>
