--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,8 +157,6 @@ jobs:
           sed -i 's!<id>ossrh</id>!<id>github</id>!' pom.xml
           sed -i '223,241d' pom.xml
 
-          cat pom.xml
-
           # FIXME: Legg til maven-settings.xml i melosys-kodeverk-java
           cat > maven-settings.xml <<EOT
           <settings>
@@ -166,11 +164,14 @@ jobs:
                   <server>
                       <id>github</id>
                       <username>x-access-token</username>
-                      <password>${GITHUB_TOKEN}</password>
+                      <password>GITHUB_TOKEN</password>
                   </server>
               </servers>
           </settings>
           EOT
+
+          # FIXME: Virker ikke som token blir resolva
+          sed -i.bcp 's!GITHUB_TOKEN!'${GITHUB_TOKEN}'!' maven-settings.xml
 
           cat maven-settings.xml
 
