--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,7 +164,7 @@ jobs:
                   <server>
                       <id>github</id>
                       <username>x-access-token</username>
-                      <password>${env.GITHUB_TOKEN}</password>
+                      <password>${GITHUB_TOKEN}</password>
                   </server>
               </servers>
           </settings>
