--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,10 +152,12 @@ jobs:
       - name: Hente Maven-avhengigheter
         run: |
           # FIXME: Fiks/fjern maven-gpg-plugin i melosys-kodeverk-java/pom.xml
-          sed -i 's!https://oss.sonatype.org/content/repositories/snapshots!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
+          #sed -i 's!https://oss.sonatype.org/content/repositories/snapshots!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
           sed -i 's!https://oss.sonatype.org/service/local/staging/deploy/maven2/!https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!' pom.xml
+          sed -i 's!>https://oss.sonatype.org/<!>https://maven.pkg.github.com/fleskesvor/melosys-kodeverk!<' pom.xml
           sed -i 's!<id>ossrh</id>!<id>github</id>!' pom.xml
           sed -i '223,241d' pom.xml
+          sed -i '38,41d' pom.xml
 
           # FIXME: Legg til maven-settings.xml i melosys-kodeverk-java
           cat > maven-settings.xml <<EOT
@@ -169,9 +171,6 @@ jobs:
               </servers>
           </settings>
           EOT
-
-          # FIXME: Virker ikke som token blir resolva... Hadde satt variabelen GITHUB_TOKENN (med to N-er)
-          #sed -i.bcp 's!GITHUB_TOKEN!'${GITHUB_TOKEN}'!' maven-settings.xml
 
           cat maven-settings.xml
 
